[tool.poetry]
name = "top-charted"
version = "0.1.0"
description = "Webscrapping Billboard top chart data and vinyl records"
authors = ["Raymond Harris <raymondtimothyharris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.9.0"
pandas = "^2.0.1"
pip = "^23.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
